-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.9
-
None
-
7c69d0926 (dev)
Just run any Qt application, it'll say that. With debug:
qt.highdpi: Initializing high-DPI scaling qt.highdpi: environment variable set: QT_SCALE_FACTOR_ROUNDING_POLICY "Floor" setHighDpiScaleFactorRoundingPolicy must be called before creating the QGuiApplication instance
Environment:
QT_AUTO_SCREEN_SCALE_FACTOR=0 QT_SCALE_FACTOR_ROUNDING_POLICY=Floor
Backtrace of the warning:
#7 0x00007ffff65090e0 in QMessageLogger::warning (this=0x7fffffffd380,
msg=0x7ffff7b1f140 "setHighDpiScaleFactorRoundingPolicy must be called before creating the QGuiApplication instance")
at /home/tjmaciei/src/qt/qt6/qtbase/src/corelib/global/qlogging.cpp:631
#8 0x00007ffff724222c in QGuiApplication::setHighDpiScaleFactorRoundingPolicy (policy=Qt::HighDpiScaleFactorRoundingPolicy::Floor)
at /home/tjmaciei/src/qt/qt6/qtbase/src/gui/kernel/qguiapplication.cpp:4011
#9 0x00007ffff7264f28 in QHighDpiScaling::initHighDpiScaling () at /home/tjmaciei/src/qt/qt6/qtbase/src/gui/kernel/qhighdpiscaling.cpp:454
#10 0x00007ffff7237075 in QGuiApplicationPrivate::createPlatformIntegration (this=0x55555558d1a0)
at /home/tjmaciei/src/qt/qt6/qtbase/src/gui/kernel/qguiapplication.cpp:1499
#11 0x00007ffff7237e65 in QGuiApplicationPrivate::createEventDispatcher (this=0x55555558d1a0) at /home/tjmaciei/src/qt/qt6/qtbase/src/gui/kernel/qguiapplication.cpp:1617
#12 0x00007ffff65e8ef5 in QCoreApplicationPrivate::init (this=0x55555558d1a0) at /home/tjmaciei/src/qt/qt6/qtbase/src/corelib/kernel/qcoreapplication.cpp:878
#13 0x00007ffff7237f83 in QGuiApplicationPrivate::init (this=0x55555558d1a0) at /home/tjmaciei/src/qt/qt6/qtbase/src/gui/kernel/qguiapplication.cpp:1645
#14 0x00007ffff7231718 in QGuiApplication::QGuiApplication (this=0x7fffffffd9b0, argc=@0x7fffffffd99c: 1, argv=0x7fffffffdb50)
at /home/tjmaciei/src/qt/qt6/qtbase/src/gui/kernel/qguiapplication.cpp:651
| For Gerrit Dashboard: QTBUG-132430 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 631734,4 | highdpi: avoid rounding policy warning | dev | qt/qtbase | Status: MERGED | +2 | 0 |