highdpi: avoid rounding policy warning

Calling setHighDpiScaleFactorRoundingPolicy() during
Qt startup warns:

  "setHighDpiScaleFactorRoundingPolicy must be called
   before creating the QGuiApplication instance"

The warning is intended for user code, and Qt internal
code need not heed it.

Set the highDpiScaleFactorRoundingPolicy private variable
directly instead.

Fixes: QTBUG-132430
Change-Id: I50285dc76209f4a96bcdf46e1861fc2dc17ca5c2
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>